fix: always flush the batch handler for CompleteDataSet import [DHIS2-15362]